--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,3 +1,5 @@
+@charset 'utf-8';
+
 .top-pic{
     display: block;
     width: 100%;
@@ -80,6 +82,7 @@
             height: 0px;
             background-color: #fff;
             overflow: hidden;
+            box-shadow: 0 2px 10px rgba(0,0,0,.15);
             transition: all .5s;
         }
         &:hover{
