--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -1,3 +1,5 @@
+@charset 'utf-8';
+
 *{
     padding: 0;
     margin: 0;
@@ -35,5 +37,5 @@ em {
     visibility: hidden;
 }
 body {
-    font-size: 14px "微软雅黑";
+    font-size: 14px;
 }
