--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,6 +13,10 @@ a {
   width: 1226px;
   margin: 0 auto;
 }
+.login-wrapper {
+  width: 1130px;
+  margin: 0 auto;
+}
 h1,
 h2,
 h3,
@@ -36,7 +40,7 @@ em {
   visibility: hidden;
 }
 body {
-  font-size: 14px "微软雅黑";
+  font-size: 14px;
 }
 header > .top-pic {
   display: block;
