--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -14,6 +14,11 @@ a{
     width: 1226px;
     margin:0 auto;
 }
+.login-wrapper{
+    width: 1130px;
+    margin:0 auto;
+}
+
 h1,
 h2,
 h3,
@@ -39,3 +44,4 @@ em {
 body {
     font-size: 14px;
 }
+
