--- a/src/styles/product.less
+++ b/src/styles/product.less
@@ -118,6 +118,12 @@
                     justify-content: space-between;
                     line-height: 30px;
                     color: #616161;
+                    &>#num{
+                        border: 0;
+                        outline: 0;
+                        height: 30px;
+                        width: 120px;
+                    }
                 }
                 &>.total-price{
                     font-size: 24px;
@@ -178,4 +184,4 @@
         display: block;
     }
 }
-@import "./footer.less";
+// @import "./footer.less";
