--- a/src/css/product.css
+++ b/src/css/product.css
@@ -195,29 +195,53 @@ header > .bottom-nav .bottom-nav-left > a:hover::after {
 header > .bottom-nav .bottom-nav-middle {
   float: left;
   margin-left: 190px;
-}
-header > .bottom-nav .bottom-nav-middle > a {
-  display: inline-block;
-  line-height: 100px;
-  padding: 0  7px;
-  color: #333;
+  height: 100px;
+  padding-left: 40px;
   overflow: hidden;
 }
-header > .bottom-nav .bottom-nav-middle > a:hover > .box {
-  height: 230px;
+header > .bottom-nav .bottom-nav-middle > div {
+  display: inline-block;
+  height: 100px;
+  padding: 0  7px;
 }
-header > .bottom-nav .bottom-nav-middle > a:hover {
+header > .bottom-nav .bottom-nav-middle > div > a {
+  color: #333;
+  display: block;
+  height: 100px;
+  line-height: 100px;
+}
+header > .bottom-nav .bottom-nav-middle > div > a:hover {
   color: #ff6700;
 }
-header > .bottom-nav .bottom-nav-middle > a > .box {
+header > .bottom-nav .bottom-nav-middle > div:hover > .box {
+  height: 230px;
+}
+header > .bottom-nav .bottom-nav-middle > div > .box {
   position: absolute;
   left: 0;
   top: 100px;
   width: 100%;
-  height: 0;
+  height: 0px;
   z-index: 999;
-  background-color: #5b7533;
+  padding: 0 100px;
+  background-color: #fff;
   transition: height 0.5s;
+}
+header > .bottom-nav .bottom-nav-middle > div > .box > a {
+  display: inline-block;
+}
+header > .bottom-nav .bottom-nav-middle > div > .box > a img {
+  width: 160px;
+  height: 110px;
+  border: 0;
+}
+header > .bottom-nav .bottom-nav-middle > div > .box > a .desc {
+  color: #333;
+  text-align: center;
+}
+header > .bottom-nav .bottom-nav-middle > div > .box > a .price {
+  color: #ff6700;
+  text-align: center;
 }
 header > .bottom-nav .bottom-nav-right {
   float: right;
@@ -361,6 +385,12 @@ header > .bottom-nav .bottom-nav-right button {
   justify-content: space-between;
   line-height: 30px;
   color: #616161;
+}
+.product-main > .product-box > .right-box > .selected-box > .selected > #num {
+  border: 0;
+  outline: 0;
+  height: 30px;
+  width: 120px;
 }
 .product-main > .product-box > .right-box > .selected-box > .total-price {
   font-size: 24px;
