--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -116,6 +116,7 @@ header>.bottom-nav{
     height: 100px;
     font-size: 16px;
     position: relative;
+    background-color: #fff;
     & .bottom-nav-left{
        float: left;
        margin-top: 22px;
@@ -155,28 +156,53 @@ header>.bottom-nav{
     & .bottom-nav-middle{
         float: left;
         margin-left: 190px;
-        
-        &>a{
+        height: 100px;
+        padding-left: 40px;
+        overflow: hidden;
+        &>div{
             display: inline-block;
-            line-height: 100px;
+            height: 100px;
             padding: 0  7px;
-            color: #333;
-            overflow: hidden;
+            &>a{
+                color: #333;
+                display: block;
+                height: 100px;
+                line-height: 100px;
+                &:hover{
+                    color: #ff6700;
+                }
+            }
             &:hover>.box{
                 height: 230px;
             }
-            &:hover{
-                color: #ff6700;
-            }
+            
             &>.box{
                 position: absolute;
                 left: 0;
                 top: 100px;
                 width: 100%;
-                height: 0;
+                height: 0px;
                 z-index: 999;
-                background-color: rgb(91, 117, 51);
+                padding: 0 100px;
+                overflow: hidden;
+                background-color: #fff;
                 transition: height .5s;
+                &>a{
+                    display: inline-block;
+                    & img{
+                        width: 160px;
+                        height: 110px;
+                        border: 0;
+                    }
+                    & .desc{
+                        color: #333;
+                        text-align: center;
+                    }
+                    & .price{
+                        color: #ff6700;
+                        text-align: center;
+                    }
+                }
             }
         }
         
