--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -42,7 +42,7 @@ footer {
               line-height: 1.25;
               font-size: 14px;
               color: #424242;
-              cursor:none;
+              cursor:auto;
               &:hover{
                   color: #424242;
               }
