--- a/src/styles/shopcar.less
+++ b/src/styles/shopcar.less
@@ -1,6 +1,8 @@
 @charset 'utf-8';
 @import "./reset.less";
-
+a{
+    text-decoration:none;
+}
 .header {
     
     border-bottom: 2px solid #ff6700;
